--- a/js.html
+++ b/js.html
@@ -410,20 +410,20 @@ El árbol en sí solo va a almacenar el nodo raíz, es decir, el nodo del que cu
   <center><img src="imagenes/z.png" class="boleeanos" alt=""></center>
 </h1>
 </main>
-<h1  style="color: rgb(48, 86, 226);" style="text-align:left;">GRAFOS 
-  <h1 style="background-color:rgb(222, 211, 236) ;" style="text-align:center;" class="texto5">
-    <br>  <center><p style="color:black" class="descripcionn"><b><mark style="background-color:rgb(0, 145, 255) ;">####</mark></b></p></center>
-    <p>
-    </p>
-    <br>
-    <br>
-<p style="color:blue ;">¿ #####</p>        
-<center><img src="###" class="boleeanos" alt=""></center>
-<p>#########</p>
-<center><img src="###" class="boleeanos" alt=""></center>
-<p>#####</p>
-<center><img src="###" class="boleeanos" alt=""></center>
-</h1>
+<footer class="text-center footer-style">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-4 footer-col">
+              
+          </div>
+          
+          <div class="col-md-4 footer-col">
+              <h3>Trabajo MIGUEL-GABRIELA</h3>
+              <p>LOS MEJORES</p>
+          </div>
+      </div>
+  </div>
+</footer>
 
 </body>
 </html>
